@@ -490,6 +490,9 @@ OCaml 5.0
 - #11392, #11392: assertion failure with -rectypes and external definitions
   (Gabriel Scherer, review by Florian Angeletti, report by Dmitrii Kosarev)
 
+- #11417: Fix regression allowing virtual methods in non-virtual classes.
+  (Leo White, review by Florian Angeletti)
+
 OCaml 4.14.0 (28 March 2022)
 ----------------------------
 
